--- a/README.adoc
+++ b/README.adoc
@@ -1,6 +1,6 @@
 = Gapa
 
-Gapa is a macOS utility to enable you to hide files and folders located on your desktop.
+Gapa, a macOS utility, enables you to hide files and folders located on your desktop.
 
 .Before hidding the items:
 image:images/readme-visible.png[]
@@ -25,6 +25,6 @@ $ cd gapa/
 $ python setup.py py2app
 ----
 
-You should see a folder, `dist` in the `gapa` folder. Copy and paste to your application folder, that's it!
+You should see a folder, `dist` in the `gapa` folder. Copy and paste it to your `applications` folder.
 
-Happy Gapaling.
+Happy Gapaling..
